# Projects

./: README.md
SO2/: CMakeLists.txt
SO2-2/: CMakeLists.txt
SO2-2/include/: ArgumentReader.hpp  FileOutput.hpp  Launcher.hpp  NCursesController.hpp  OutputController.hpp  Philosopher.hpp  Storage.hpp
SO2-2/src/: main.cpp
SO2-2/src/input/arg/: ArgumentReader.cpp
SO2-2/src/problem/philosopher/: Launcher.cpp  Philosopher.cpp  Storage.cpp
SO2-2/src/problem/philosopher/output/: FileOutput.cpp  NCursesController.cpp  OutputController.cpp
SO2/include/: Controller.hpp  Launcher.hpp  Philosopher.hpp  Storage.hpp
SO2/src/: main.cpp
SO2/src/problem/philosopher/: Controller.cpp  Launcher.cpp  Philosopher.cpp  Storage.cpp
